--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "sharp": "^0.34.4",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
