--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,6 @@
       "config": { "distDir": "dist" }
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ],
   "headers": [
     {
       "source": "/(.*)",
@@ -36,5 +33,7 @@
         }
       ]
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
