--- a/vercel.json
+++ b/vercel.json
@@ -9,33 +9,33 @@
   "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+
+  "routes": [
+    { "src": "/services", "dest": "/index.html" },
+    { "src": "/territoire", "dest": "/index.html" },
+    { "src": "/galerie", "dest": "/index.html" },
+    { "src": "/avis", "dest": "/index.html" },
+    { "src": "/garanties", "dest": "/index.html" },
+    { "src": "/apropos", "dest": "/index.html" },
+    { "src": "/estimation", "dest": "/index.html" },
+    { "src": "/contact", "dest": "/index.html" },
+    { "src": "/", "dest": "/index.html" }
+  ],
+
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        }
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" },
+        { "key": "Permissions-Policy", "value": "geolocation=(self), microphone=()" }
       ]
     }
   ],
+
   "cleanUrls": true,
   "trailingSlash": false
 }
