--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "vite.config.js",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": null,
 
   "rewrites": [
     { "source": "/services", "destination": "/" },
