--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,39 +13,39 @@
   "categories": ["business", "services", "home_improvement"],
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/maskable-icon-512.png",
-      "sizes": "512x512",
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     }
   ],
   "shortcuts": [
     {
       "name": "Demander une estimation",
       "url": "/#estimation",
-      "icons": [{ "src": "/icon-192.png", "sizes": "96x96", "type": "image/png" }]
+      "icons": [{ "src": "/android-chrome-192x192.png", "sizes": "96x96", "type": "image/png" }]
     },
     {
       "name": "Voir la galerie",
       "url": "/#galerie",
-      "icons": [{ "src": "/icon-192.png", "sizes": "96x96", "type": "image/png" }]
+      "icons": [{ "src": "/android-chrome-192x192.png", "sizes": "96x96", "type": "image/png" }]
     },
     {
       "name": "Territoire desservi",
       "url": "/#territoire",
-      "icons": [{ "src": "/icon-192.png", "sizes": "96x96", "type": "image/png" }]
+      "icons": [{ "src": "/android-chrome-192x192.png", "sizes": "96x96", "type": "image/png" }]
     }
   ],
   "screenshots": [
